--- a/public/assets/css/component.css
+++ b/public/assets/css/component.css
@@ -1204,3 +1204,53 @@ a.no-style:hover {
     padding: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+.wait-loader {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 11111111111111111111111111111111;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.__loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 111;
+    color: #fff;
+}
+
+.__loader .spin {
+    width: 45px;
+    height: 45px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    border: dashed 8px #fff;
+    margin-bottom: 1rem;
+    display: block;
+    animation: rotate 1s ease infinite;
+}
+
+@keyframes rotate {
+    0%, 100% {
+        transform: scale(1.0) rotate(360deg);
+    }
+
+    35% {
+        width: 20px;
+        height: 20px;
+        transform: scale(0.8) rotate(160deg);
+        aspect-ratio: 1/1;
+    }
+}
+
+.wait-loader.hide {
+    display: none;
+}
